src/site/style.css
:root {
    --font-scale-1: 0.8em;
}

body {
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    margin: 0;
}

a:link {
    color: #941;
    text-decoration: none;
}
a:visited {
    color: #321;
}
a:focus,
a:hover {
    color: #b63;
}
a:active {
    color: #f94;
}

button {
    font-size: 1.1em;
    background: transparent;
    padding: 0.6em;
    border: solid 0.1em rgba(0,0,0, 0.75);
}

.stack > * + * {
    margin-top: 1em;
}

.image--responsive {
    width: 100%;
    height: auto;
}
.image--small {
    width: 10em;
    height: auto;
}

.section {
    padding: 1em;
}
.section__inside {
    margin: auto;
    max-width: 70ch;
}
.input-group > textarea,
.input-group > input {
    width: 100%;
}

.gallery {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    list-style-type: none;
    padding-left: 0;
    align-items: start;
}

.gallery__item {
    flex: auto;
}

@supports (gap: 1em) {
    .gallery {
        gap: 1em;
    }
}

@supports not (gap: 1em) {
    .gallery {
        margin-right: -1em;
        margin-bottom: -1em;
    }
    .gallery__item {
        margin-right: 1em;
        margin-bottom: 1em;
    }
}

.nav-main {
    border-bottom: 0.1em solid rgba(0,0,0, 0.75);
}
.nav-main__items {
    display: flex;
    gap: 1em;
    margin: 0;
    list-style-type: none;
}

.nav-item {
    position: relative;
    padding: 1em 0;
}

.nav-item__link {
    text-decoration: none;
}
.nav-item:hover,
.nav-item:focus {
    font-style: bold;
}

.nav-item--active .nav-item__link {
    font-weight: bolder;
}


.cursor {
    --size: 0.8em;
    transform: scaleY(0);
}

.cursor__outer {
    background: #fff;
    background: linear-gradient(45deg, transparent 45%, #fff 45%);
    border: 0.1em solid rgba(0,0,0, 0.75);
    border-left-color: transparent;
    border-bottom-color: transparent;
    display: flex;
    height: 0.8em;
    height: var(--size);
    justify-content: center;
    align-items: center;
    transform: rotate(-45deg);
    width: 0.8em;
    width: var(--size);
}

.cursor__inner {
    background: linear-gradient(45deg, rgba(0,0,0, 0.75) 0%, rgba(0,0,0, 0.75) 50%, transparent 51% );
    border: 0.1em solid rgba(0,0,0, 0.75);
    height: 0.4em;
    width: 0.4em;
}


.nav-item__cursor {
    left: 50%;
    transform: translateX(-50%) scaleY(0);
    top: calc(100% - 0.4em);
    position: absolute;
    visibility: hidden;
}

.nav-item__link:focus ~ .nav-item__cursor,
.nav-item:hover .nav-item__cursor,
.nav-item--active .nav-item__cursor {
    visibility: visible;
    transition: transform 300ms;
    transform: translateX(-50%) scaleY(1);
}


.nav-item__link:focus ~ .nav-item__cursor .cursor__inner,
.nav-item:hover .cursor__inner {
    visibility: hidden;
}

.nav-item--active .nav-item__link ~ .nav-item__cursor  .cursor__inner {
    visibility: visible;
}

.breadcrumbs {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    padding: 0;
    margin-right: -1.5em;
    font-size: 0.8em;
    font-size: var(--font-scale-1);
}

.breadcrumbs__breadcrumb {
    margin-right: 1.5em;
}

.breadcrumbs__breadcrumb + .breadcrumbs__breadcrumb::before {
    display: inline-block;
    content: ' ';
    width: 0.35em;
    height: 0.35em;
    transform: rotate(45deg);
    border: 0.1em solid;
    border-left-width: 0;
    border-bottom-width: 0;
    margin-right: 1.35em;
}

.user-icon-frame {
    height: 4em;
    overflow: hidden;
    transform: rotate(45deg);
    position: relative;
    margin: 1em;
    width: 4em;
}

.user-icon-frame::after {
    content: ' ';
    position: absolute;
    border: 0.1em currentColor solid;
    height: 5em;
    width: 5em;
}

.user-icon-frame__image {
    width: calc(100% + 2em);
    transform: rotate(-45deg);
    transform-origin: 26% 58%;
    transform-origin: var(--image-pos, 26% 58%);
}

